feat:added popular shows on MainActivity

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,8 @@ dependencies {
     implementation "io.reactivex.rxjava2:rxjava:$rxJavaVersion"
     implementation "io.reactivex.rxjava2:rxandroid:$rxAndroidVersion"
     implementation "com.squareup.retrofit2:adapter-rxjava2:$rxJavaAdapterVersion"
+    implementation "com.google.dagger:dagger:$daggerVersion"
+    annotationProcessor "com.google.dagger:dagger-compiler:$daggerVersion"
+    provided 'javax.annotation:jsr250-api:1.0'
+    implementation "com.android.support:palette-v7:$androidSupportVersion"
 }
