feat: loader and content provider for Grid

--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ allprojects {
         rxAndroidVersion="2.0.1"
         rxJavaAdapterVersion="2.3.0"
         daggerVersion="2.9"
+        circularImageVersion="2.2.0"
     }
 }
 
