--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,5 @@ dependencies {
     annotationProcessor "com.google.dagger:dagger-compiler:$daggerVersion"
     provided 'javax.annotation:jsr250-api:1.0'
     implementation "com.android.support:palette-v7:$androidSupportVersion"
+    compile "de.hdodenhof:circleimageview:$circularImageVersion"
 }
