feat: fixed traler storing in database

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,5 @@ dependencies {
     implementation "com.squareup.okhttp:okhttp:$okHttpVersion"
     implementation "com.jakewharton.picasso:picasso2-okhttp3-downloader:$okHttp3DownloaderVersion"
     compile "com.github.ivbaranov:materialfavoritebutton:$materialFavoriteButtonsVersion"
+    compile 'org.greenrobot:eventbus:3.1.1'
 }
