--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,4 +55,5 @@ dependencies {
     compile "com.github.ivbaranov:materialfavoritebutton:$materialFavoriteButtonsVersion"
     compile 'org.greenrobot:eventbus:3.1.1'
     compile 'com.wang.avi:library:2.1.3'
+    compile 'de.hdodenhof:circleimageview:2.2.0'
 }
