--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,8 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
+        renderscriptTargetApi 19
+        renderscriptSupportModeEnabled true
     }
     buildTypes {
         release {
@@ -56,4 +58,5 @@ dependencies {
     compile 'org.greenrobot:eventbus:3.1.1'
     compile 'com.wang.avi:library:2.1.3'
     compile 'de.hdodenhof:circleimageview:2.2.0'
+    compile 'com.jackandphantom.android:blurimage:1.2.0'
 }
