--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/ApplicationTheme">
-        <activity android:name=".ui.MainActivity"></activity>
+        <activity android:name=".ui.activities.MainActivity" />
 
         <provider
             android:name=".data.ShowsProvider"
@@ -21,14 +21,15 @@
             android:enabled="true"
             android:exported="false" />
 
-        <activity android:name=".ui.SplashActivity">
+        <activity android:name=".ui.activities.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.DetailActivity"></activity>
+        <activity android:name=".ui.activities.DetailActivity" />
+        <activity android:name=".ui.activities.SettingsActivity"></activity>
     </application>
 
 </manifest>
