--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,17 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.activities.DetailActivity" />
-        <activity android:name=".ui.activities.SettingsActivity"></activity>
+        <activity android:name=".ui.activities.SettingsActivity" />
+
+        <receiver android:name=".widget.ShowWidgetProvider">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/show_widget_provider_info" />
+        </receiver>
     </application>
 
 </manifest>
