--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,8 @@ dependencies {
     compile "com.github.ivbaranov:materialfavoritebutton:$materialFavoriteButtonsVersion"
     compile 'org.greenrobot:eventbus:3.1.1'
     compile 'com.wang.avi:library:2.1.3'
-    compile 'de.hdodenhof:circleimageview:2.2.0'
-    compile 'com.jackandphantom.android:blurimage:1.2.0'
+    implementation 'com.google.firebase:firebase-database:11.8.0'
+    implementation 'com.google.firebase:firebase-core:11.8.0'
+    implementation 'com.firebase:firebase-jobdispatcher:0.8.5'
 }
+apply plugin: 'com.google.gms.google-services'
