feat: notification of quotes showing

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,6 +49,7 @@
             </intent-filter>
         </service>
 
+        <activity android:name=".ui.activities.QuoteDisplayActivity"></activity>
     </application>
 
 </manifest>
